Using setup_apps from submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodule/LMToysBash"]
 	path = submodule/LMToysBash
 	url = https://github.com/lordmikefin/LMToysBash.git
+[submodule "setup_apps"]
+	path = setup_apps
+	url = https://github.com/lordmikefin/setup_apps.git
