--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,27 +26,27 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Build project # This would actually build your project, using zip for an example artifact
-          zip -r LMAutoSetBotWin-${{ steps.vars.outputs.parsed_tag }}.zip *
-      - name: Create Release
-        id: create_release
-        uses: ncipollo/release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag: ${{ steps.vars.outputs.parsed_tag }}
-          name: Release ${{ steps.vars.outputs.parsed_tag }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: nanoufo/action-upload-artifacts-and-release-assets@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          retention-days: 1
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          release-upload-url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          path: |
-            LMAutoSetBotWin-${{ steps.vars.outputs.parsed_tag }}.zip
-          upload-release-files: true
+#      - name: Build project # This would actually build your project, using zip for an example artifact
+#          zip -r LMAutoSetBotWin-${{ steps.vars.outputs.parsed_tag }}.zip *
+#      - name: Create Release
+#        id: create_release
+#        uses: ncipollo/release-action@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+#        with:
+#          tag: ${{ steps.vars.outputs.parsed_tag }}
+#          name: Release ${{ steps.vars.outputs.parsed_tag }}
+#          draft: false
+#          prerelease: false
+#      - name: Upload Release Asset
+#        id: upload-release-asset
+#        uses: nanoufo/action-upload-artifacts-and-release-assets@v2
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          retention-days: 1
+#          github-token: ${{ secrets.GITHUB_TOKEN }}
+#          release-upload-url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+#          path: |
+#            LMAutoSetBotWin-${{ steps.vars.outputs.parsed_tag }}.zip
+#          upload-release-files: true
