--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,8 +26,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-#      - name: Build project # This would actually build your project, using zip for an example artifact
-#          zip -r LMAutoSetBotWin-${{ steps.vars.outputs.parsed_tag }}.zip *
+      - name: Build project # This would actually build your project, using zip for an example artifact
+          zip -r LMAutoSetBotWin-${{ steps.vars.outputs.parsed_tag }}.zip *
 #      - name: Create Release
 #        id: create_release
 #        uses: ncipollo/release-action@v1
