--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           submodules: recursive
       - name: Build project # This would actually build your project, using zip for an example artifact
+        run: |
           zip -r LMAutoSetBotWin-${{ steps.vars.outputs.parsed_tag }}.zip *
 #      - name: Create Release
 #        id: create_release
